--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <input type="date" size="40"><!--设置选择时间的文本框-->
     <input type="color"><!--设置颜色的按钮--><br>
 </form>
-<a href="https://baike.baidu.com/item/%E6%96%B0%E4%B8%96%E7%BA%AA%E7%A6%8F%E9%9F%B3%E6%88%98%E5%A3%AB/55458?fr=aladdin" target="blank"><input type="image" src="image/1494257083623.jpg" width="1500px"></a>
+<a href="https://baike.baidu.com/item/%E6%96%B0%E4%B8%96%E7%BA%AA%E7%A6%8F%E9%9F%B3%E6%88%98%E5%A3%AB/55458?fr=aladdin" target="blank"><input type="image" src="1494257083623.jpg" width="1500px"></a>
 <!--img插入图片 src插入图片地址 width图片宽度 height图片高度 图片也可以加超链接-->
 <form>
 <input type="image" src="jiugongge.jpg" usemap="#map1">
