--- a/index.html
+++ b/index.html
@@ -6,55 +6,55 @@
 </head>
 <body>
     <section class="animation">
-        <img class="firstbeijing" src="image/开头.jpg" alt="firstbeijing">
-        <img class="firsttext" src="image/文字1.png" alt="firsttext">
-        <img class="syqleft" src="image/人左.png">
-        <img class="syqcenter" src="image/人中.png">
-        <img class="syqright" src="image/人右.png">
-        <img class="textleft" src="image/字左.png">
-        <img class="textcenter" src="image/字中.png">
-        <img class="textright" src="image/字右.png">
+        <img class="firstbeijing" src="开头.jpg" alt="firstbeijing">
+        <img class="firsttext" src="文字1.png" alt="firsttext">
+        <img class="syqleft" src="人左.png">
+        <img class="syqcenter" src="人中.png">
+        <img class="syqright" src="人右.png">
+        <img class="textleft" src="字左.png">
+        <img class="textcenter" src="字中.png">
+        <img class="textright" src="字右.png">
     </section>
     <section class="animation1">
-        <img class="syqzuo" src="image/人物左.jpg">
-        <img class="syqzhong" src="image/人物中.jpg">
-        <img class="syqyou" src="image/人物右.jpg">
-        <img class="beijingzhong" src="image/底色.png">
-        <img class="beijingzuo" src="image/底色.png">
-        <img class="beijingyou" src="image/底色.png">
-        <img class="wenzi1" src="image/我叫石月乔.png">
-        <img class="wenzi2" src="image/mi chiamo shiyueqiao.png">
-        <img class="syqduli" src="image/人抠图.png">
-        <img class="yuanquan" src="image/圆圈.png">
-        <img class="nenglizhi" src="image/能力图.png">
+        <img class="syqzuo" src="人物左.jpg">
+        <img class="syqzhong" src="人物中.jpg">
+        <img class="syqyou" src="人物右.jpg">
+        <img class="beijingzhong" src="底色.png">
+        <img class="beijingzuo" src="底色.png">
+        <img class="beijingyou" src="底色.png">
+        <img class="wenzi1" src="我叫石月乔.png">
+        <img class="wenzi2" src="mi chiamo shiyueqiao.png">
+        <img class="syqduli" src="人抠图.png">
+        <img class="yuanquan" src="圆圈.png">
+        <img class="nenglizhi" src="能力图.png">
     </section>
     <section class="animation2">
-        <img class="gif1" src="image/first-gif.gif">
-        <img class="white" src="image/白色.jpg">
-        <img class="bengong" src="image/本宫的美照.png">
-        <img class="jikechufa" src="image/即刻出发_画板 1.svg">
+        <img class="gif1" src="first-gif.gif">
+        <img class="white" src="白色.jpg">
+        <img class="bengong" src="本宫的美照.png">
+        <img class="jikechufa" src="即刻出发_画板 1.svg">
     </section>
     <div class="buchong">
         <div  class="image1">
-            <img src="image/微信图片_20200424104348.jpg" width="1200px">
+            <img src="微信图片_20200424104348.jpg" width="1200px">
         </div>
         <div  class="image2">
-            <img src="image/微信图片_20200424104402.jpg" height="600px">
+            <img src="微信图片_20200424104402.jpg" height="600px">
         </div>
         <div  class="image3">
-            <img src="image/微信图片_20200424104439.jpg" height="600px">
+            <img src="微信图片_20200424104439.jpg" height="600px">
         </div>
         <div  class="image4">
-            <img src="image/微信图片_20200424104418.jpg" width="1200px">
+            <img src="微信图片_20200424104418.jpg" width="1200px">
         </div>
         <div  class="image5">
-            <img src="image/微信图片_20200424104433.jpg" width="380px">
+            <img src="微信图片_20200424104433.jpg" width="380px">
         </div>
         <div  class="image6">
-            <img src="image/微信图片_20200424104411.jpg" width="380px">
+            <img src="微信图片_20200424104411.jpg" width="380px">
         </div>
         <div  class="image7">
-            <img src="image/微信图片_20200424104428.jpg" width="380px">
+            <img src="微信图片_20200424104428.jpg" width="380px">
         </div>
     </div>
     <div class="jieshuwenzi">
@@ -62,7 +62,7 @@
             Sono io, sono il più adorabile Shi Yueqiao.</h2>
     </div>
     <div class="fengdi">
-        <img class="fengditu" src="image/封底白.jpg" width="1800px">
+        <img class="fengditu" src="封底白.jpg" width="1800px">
     </div>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js" integrity="sha256-BCkpwV5o3ac9GC/aFo4/lgrzwRHvUNJaacC42YZSkKw=" crossorigin="anonymous"></script>
